[gd_scene load_steps=18 format=2]

[ext_resource path="res://blocksTexture.png" type="Texture" id=1]
[ext_resource path="res://redZoneCollisions.gd" type="Script" id=2]
[ext_resource path="res://Consolas.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://mouse.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 473.719, 47 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 530, 59.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 237.625, 67.875 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 511.25, 69.875 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 523.5, 61.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 324.5, 542 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 44.75, 544 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 93.75, 68.75 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 54.75, 49.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 153, 70.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 59.25, 58.75 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 61.75, 55.25 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Node2D" parent="."]
position = Vector2( 0, -4 )

[node name="background" type="Sprite" parent="Background"]
modulate = Color( 0.878431, 0.462745, 0.419608, 1 )
position = Vector2( -216, 3 )
scale = Vector2( 2254, 1086 )
texture = ExtResource( 1 )
centered = false

[node name="dangerBG" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 602, 46 )
scale = Vector2( 1274, 984 )
texture = ExtResource( 1 )
centered = false

[node name="safeBG" type="Sprite" parent="Background"]
modulate = Color( 0.913725, 0.768627, 0.415686, 1 )
position = Vector2( 654, 95 )
scale = Vector2( 1170, 878 )
texture = ExtResource( 1 )
centered = false

[node name="orangeBG" type="Sprite" parent="Background"]
modulate = Color( 0.956863, 0.635294, 0.380392, 1 )
position = Vector2( 50, 96 )
scale = Vector2( 500, 876 )
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="Background"]
margin_left = 71.0
margin_top = 125.0
margin_right = 531.0
margin_bottom = 997.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Instructions:

Move your mouse
towards the green
zone and don't hit
the red zone!"

[node name="dangerrBG2" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 643, 198 )
scale = Vector2( 1066, 122 )
texture = ExtResource( 1 )
centered = false

[node name="dangerBG3" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 1120, 310 )
scale = Vector2( 119, 137 )
texture = ExtResource( 1 )
centered = false

[node name="dangerBG4" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 927, 432 )
scale = Vector2( 475, 141 )
texture = ExtResource( 1 )
centered = false

[node name="dangerBG5" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 800, 690 )
scale = Vector2( 1026, 141 )
texture = ExtResource( 1 )
centered = false

[node name="winBG6" type="Sprite" parent="Background"]
modulate = Color( 0.498039, 0.956863, 0.352941, 1 )
position = Vector2( 1699, 973 )
scale = Vector2( 125, 118 )
texture = ExtResource( 1 )
centered = false

[node name="safeBG2" type="Sprite" parent="Background"]
modulate = Color( 0.913725, 0.768627, 0.415686, 1 )
position = Vector2( 761, 3 )
scale = Vector2( 122, 94 )
texture = ExtResource( 1 )
centered = false

[node name="dangerBG6" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 1519, 432 )
scale = Vector2( 351, 141 )
texture = ExtResource( 1 )
centered = false

[node name="dangerBG7" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( 617, 430 )
scale = Vector2( 214, 141 )
texture = ExtResource( 1 )
centered = false

[node name="redZoneCollisions" type="Node" parent="."]
script = ExtResource( 2 )

[node name="redZone" type="Area2D" parent="redZoneCollisions"]
position = Vector2( -2, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone"]
position = Vector2( 1357.28, 45 )
shape = SubResource( 2 )

[node name="redZone2" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone2"]
position = Vector2( 1180, 255.5 )
shape = SubResource( 3 )

[node name="redZone3" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone3"]
position = Vector2( 1164.38, 499.125 )
shape = SubResource( 4 )

[node name="redZone4" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone4"]
position = Vector2( 1311.75, 757.125 )
shape = SubResource( 5 )

[node name="redZone5" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone5"]
position = Vector2( 1174.5, 1029.5 )
shape = SubResource( 6 )

[node name="redZone6" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone6"]
position = Vector2( 328, 539 )
shape = SubResource( 7 )

[node name="redZone7" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone7"]
position = Vector2( 1870.25, 539 )
shape = SubResource( 8 )

[node name="redZone8" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone8"]
position = Vector2( 735.25, 496.25 )
shape = SubResource( 9 )

[node name="redZone9" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone9"]
position = Vector2( 705.75, 43.5 )
shape = SubResource( 10 )

[node name="redZone10" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone10"]
position = Vector2( 1674, 500.5 )
shape = SubResource( 11 )

[node name="redZone11" type="Area2D" parent="redZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redZoneCollisions/redZone11"]
position = Vector2( 1178.75, 375.25 )
shape = SubResource( 12 )

[node name="greenZoneCollisions" type="Node" parent="."]

[node name="greenZone2" type="Area2D" parent="greenZoneCollisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="greenZoneCollisions/greenZone2"]
position = Vector2( 1761.25, 1028.75 )
shape = SubResource( 13 )

[node name="mouse" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="mouse_entered" from="redZoneCollisions/redZone" to="redZoneCollisions" method="_on_redZone_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone2" to="redZoneCollisions" method="_on_redZone2_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone3" to="redZoneCollisions" method="_on_redZone3_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone4" to="redZoneCollisions" method="_on_redZone4_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone5" to="redZoneCollisions" method="_on_redZone5_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone6" to="redZoneCollisions" method="_on_redZone6_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone7" to="redZoneCollisions" method="_on_redZone7_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone8" to="redZoneCollisions" method="_on_redZone8_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone9" to="redZoneCollisions" method="_on_redZone9_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone10" to="redZoneCollisions" method="_on_redZone10_mouse_entered"]
[connection signal="mouse_entered" from="redZoneCollisions/redZone11" to="redZoneCollisions" method="_on_redZone11_mouse_entered"]
[connection signal="mouse_entered" from="greenZoneCollisions/greenZone2" to="mouse" method="_on_greenZone2_mouse_entered"]
