[gd_scene load_steps=6 format=2]

[ext_resource path="res://Block Minigame/blocksTexture.png" type="Texture" id=1]
[ext_resource path="res://Consolas.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://mouse.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 276, 81.75 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Node2D" parent="."]
position = Vector2( 0, -4 )

[node name="redBG" type="Sprite" parent="Background"]
modulate = Color( 0.909804, 0.184314, 0.184314, 1 )
position = Vector2( -18, -6 )
scale = Vector2( 1952, 1105 )
texture = ExtResource( 1 )
centered = false

[node name="yellowBG" type="Sprite" parent="Background"]
modulate = Color( 0.913725, 0.768627, 0.415686, 1 )
position = Vector2( 82, 80 )
scale = Vector2( 1776, 930 )
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="Background"]
margin_left = 127.0
margin_top = 823.0
margin_right = 1667.0
margin_bottom = 1028.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "It's like you want your
human to leave..."

[node name="winBG6" type="Sprite" parent="Background"]
modulate = Color( 0.498039, 0.956863, 0.352941, 1 )
position = Vector2( 1264, 127 )
scale = Vector2( 550, 160 )
texture = ExtResource( 1 )
centered = false

[node name="Label2" type="Label" parent="Background"]
margin_left = 1309.0
margin_top = 144.0
margin_right = 1779.0
margin_bottom = 268.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "try again."
align = 1
valign = 1

[node name="tryAgain" type="Node" parent="."]
script = ExtResource( 3 )

[node name="tryAgainHoverZone" type="Area2D" parent="tryAgain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tryAgain/tryAgainHoverZone"]
position = Vector2( 1542, 200 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="tryAgain/tryAgainHoverZone" to="tryAgain" method="_on_tryAgainHoverZone_mouse_entered"]
